<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="25dp"
            android:background="@drawable/hebreportsympthoms" />

        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:id="@+id/backBtn"
            android:background="@drawable/backbutton"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="340dp"
        android:layout_height="430dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/squarewriting"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameStr"
                android:layout_marginEnd="7dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameIn"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idStr"
                android:layout_marginEnd="7dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/idIn"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:inputType="number"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phoneStr"
                android:layout_marginEnd="7dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phoneIn"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:inputType="phone"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addressStr"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:layout_marginEnd="7dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addressIn"
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/symptomesFillStr"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/coughStr" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/feverStr" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/soreStr" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/tiredStr" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/chestStr"/>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/finishBtn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/hebfinishbutton">
        </ImageButton>
    </LinearLayout>
</LinearLayout>